# code-base

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  compose.yaml  logging.conf  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: issue_template.md  pull_request_template.md
.github/workflows/: check_format.yml  docker_image.yml  unittest.yml
alembic/: env.py
alembic/versions/: 202409090946_1e42464a66e4_create_users_table.py  202410182112_9c33067267af_update_table_user.py  202410231652_c5355127adf1_create_user_table.py
public/styles/: style.css
sql/: setup_dummy.sql
src/: conftest.py  main.py  manage_aiohttp.py  router.py
src/admin/: controller.py
src/administrator/: controller.py  router.py
src/authentication/: controller.py  router.py  service.py
src/authentication/schemas/: authentication_schema.py  request_schema.py  response_schema.py
src/core/: alembic.py  authentical.py  constants.py  settings.py
src/core/base/: model.py  repository.py  service.py  view.py
src/core/base/schemas/: request.py
src/core/middlewares/: error_handle.py  logger_handle.py
src/database/: base_model.py  base_repository.py  base_schema.py  connection.py
src/tests/: mockup.py  test_authentication.py  test_common.py  test_manage_file.py  test_user.py
src/user/: controller.py  model.py  repository.py  router.py  service.py
src/user/schemas/: request_schema.py  response_schema.py  user_schema.py
src/user/tests/: test_user.py
src/utilities/: authentical_policy.py  base_view.py  configs.py  constants.py  functions.py  logger.py
src/utilities/middlewares/: error_handle.py
src/utilities/schemas/: response_schema.py
templates/components/: loading.html.j2
templates/layout_base/: base.html.j2
templates/pages/: index.html.j2
templates/pages/admin/: index.html.j2  login.html.j2
