[tool.poetry]
name = "code-base"
version = "0.1.0"
description = "This is the code base for aio-http framework"
authors = ["ngquocnhat9317dev <ngquocnhat9317@outlook.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.10.5"
aiohttp-jinja2 = "1.6"
aiohttp-middlewares = "2.4.0"
aiohttp-pydantic = "2.2.2"
alembic = "1.13.2"
asyncpg = "0.29.0"
greenlet = "3.0.3"
gunicorn = "23.0.0"
pydantic = "2.9.0"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.34"
redis = "5.0.8"
passlib = "1.7.4"
psycopg2-binary = "2.9.9"
pre-commit = "3.8.0"
sqlalchemy-utils = "0.41.2"
pyjwt = "2.9.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-cov = "5.0.0"
pytest-env = "1.1.3"
faker = "30.1.0"
ruff = "0.6.4"
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/core/alembic.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
